// 通用协议结构
syntax = "proto3";

option java_package = "org.wyf.game.proto.struct";

// 返回服务器时间
message PbGetServerTimeResp {
  int64 currentTimeMillis = 1;// 当前毫秒时间戳
}
